# xwire

./: .gitignore  LICENSE  README.md  main.py  mytree.sh  notes  pyproject.toml
src/xwire/: __init__.py  __init___BACKUP_16754.py  __init___BASE_16754.py  __init___REMOTE_16754.py
